refs #master: Add angular Material 6

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href="assets/common.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://angular-academy.s3.amazonaws.com/bundles/bundle.20170214122720.min.css">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
